update: profile + history-subscriptions